Первое задание по LaTeX(исправлены списки)

--- a/TEX1.tex
+++ b/TEX1.tex
@@ -1,10 +1,9 @@
 \documentclass[a4paper,11pt]{article}
-\usepackage[11pt]{extsizes}
 \usepackage{cmap}   % Поддержка поиска русских слов в PDF (pdflatex)
 \usepackage[T2A]{fontenc}
 \usepackage[cp1251]{inputenc}   % Выбор языка и кодировки
 \usepackage[english, russian]{babel}
-\usepackage[left=1cm,right=1cm,top=1cm,bottom=2cm]{geometry} % поля страницы
+\usepackage[left=1cm,right=1cm,top=1cm,bottom=2cm]{geometry}   % поля страницы
 \pagestyle{empty}   % убирает нумерация страниц
 
 % Эпиграф
@@ -18,7 +17,9 @@
 \setlength{\parindent}{1.5cm}   % Отступ красной строки
 \setlength{\parskip}{0.2cm}   % Отступ между абзацами
 
-
+% Список
+\usepackage{enumitem}
+\setlist{nolistsep, itemsep=0.2cm, parsep=0pt, leftmargin=1.9cm}
 
 \begin{document}
   \begin{center}
@@ -40,7 +41,7 @@
       Конечно, среди нас всегда есть гении, которые в одиночку могут выполнить работу группы обычных людей-разработчиков и добиться в своей области успеха, сравнимого с достижениями Франка Ллойда Райта или Леонардо да Винчи. Такие люди нам нужны как архитекторы, которые изобретают новые идиомы, механизмы и основные идеи, используемые затем при разработке других систем. Однако, как замечает Петерс: "В мире очень мало гениев, и не надо думать, будто в среде программистов их доля выше средней" \cite {Peters}. Несмотря на то, что все мы чуточку гениальны, в промышленном программировании нельзя постоянно полагаться на божественное вдохновение, которое обязательно поможет нам. Поэтому мы должны рассмотреть более надежные способы конструирования сложных систем. Для лучшего понимания того, чем мы собираемся управлять, сначала ответим на вопрос: почему сложность присуща всем большим программным системам?}
     
     \subsection{\large Почему программному обеспечению присуща сложность?}
-      {\normalsize Как говорит Брукс, "сложность программного обеспечения - отнюдь не случайное его свойство" \cite {Brooks1}. Сложность вызывается четырьмя основными причинами:\\
+      {\normalsize Как говорит Брукс, "сложность программного обеспечения - отнюдь не случайное его свойство" \cite {Brooks1}. Сложность вызывается четырьмя основными причинами:
       \begin{itemize}
         \item сложностью реальной предметной области, из которой исходит заказ на разработку;
         \item трудностью управления процессом разработки;
