Первое задание по LaTeX(еще раз исправлены списки)

--- a/TEX1.tex
+++ b/TEX1.tex
@@ -19,7 +19,7 @@
 
 % Список
 \usepackage{enumitem}
-\setlist{nolistsep, itemsep=0.2cm, parsep=0pt, leftmargin=1.9cm}
+\setlist{nolistsep, itemsep=0.2cm, parsep=0pt, leftmargin=0cm, itemindent=1.9cm}
 
 \begin{document}
   \begin{center}
